# kanime-api-v3

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  `
src/: config.rs  main.rs  types.rs
src/middlewares/: auth.rs  ip.rs
src/routes/: anime.rs  mod.rs  seo.rs
