[package]
name = "kanime-api-v3"
version = "3.0.2"
edition = "2021"
description = "Kanime API V3 Server"
publish = false

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10.0"
mongodb = "2.3.1"
gethostname = "0.4.1"
toml = "0.5.10"
url-escape = "0.1.1"
anyhow = "1.0"

[profile.release]
lto = "thin"