[package]
name = "kanime-api-v3"
version = "3.0.3"
edition = "2021"
description = "Kanime API V3 Server"
publish = false

[dependencies]
actix-web = { version = "4", features = ["macros", "compress-gzip", "compress-brotli", "cookies"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1"
log = "0.4"
env_logger = "0.10.0"
mongodb = "2.3.1"
gethostname = "0.4.1"
toml = "0.5.10"
url-escape = "0.1.1"
anyhow = "1.0"
meilisearch-sdk = "0.21"
redis = { version = "0.22.2", features = ["tokio-comp"], default-features = false }
ril = { version = "0", features = ["png", "webp"] }
actix-easy-multipart = "3.0.0"
random-string = "1.0.0"
fast-blurhash = "1.0.1"
color-thief = "0.2.2"

[profile.release]
lto = "thin"
