[package]
name = "kanime-api-v3"
version = "3.0.6"
edition = "2021"
description = "Kanime API V3 Server"
publish = false

[dependencies]
actix-web = { version = "4", features = ["macros", "compress-gzip", "compress-brotli", "cookies"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1"
log = "0.4"
env_logger = "0.10.0"
mongodb = "2.4.0"
gethostname = "0.4.1"
toml = "0.5.11"
url-escape = "0.1.1"
anyhow = "1.0"
meilisearch-sdk = "0.22"
redis = { version = "0.22.3", features = ["tokio-comp"], default-features = false }
ril = { version = "0", features = ["webp"] }
actix-easy-multipart = "3.0.0"
random-string = "1.0.0"
fast-blurhash = "1.0.1"
color-thief = "0.2.2"
futures = "0.3"
chrono = "0.4"

[profile.release]
lto = "thin"
